--- a/config/config.json
+++ b/config/config.json
@@ -8,10 +8,11 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "admin-dev",
+    "password": "salv2018gpes10",
+    "database": "salv-bd",
+    "host": "mysql995.umbler.com",
+    "port": "41890",
     "dialect": "mysql"
   },
   "production": {
