--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chai-http": "^4.2.1",
+    "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "mocha": "^5.2.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.10",
