--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "hppod",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chai-http": "^4.2.1",
     "dotenv-safe": "^6.1.0",
