--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
     "mocha": "^5.2.0",
+    "monk": "^6.0.6",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.10",
     "sequelize": "^4.38.0"
