--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "chai-http": "^4.2.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
     "jsonwebtoken": "^8.5.0",
