--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "hppod",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.6.2",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "chai-http": "^4.2.1",
