--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
+    "handlebars": "^4.1.2",
     "jsonwebtoken": "^8.5.0",
     "mocha": "^5.2.0",
     "monk": "^6.0.6",
