--- a/data/relatorio-de-residentes/config.json
+++ b/data/relatorio-de-residentes/config.json
@@ -1,16 +1,18 @@
 {
     "folder": null,
-    "shortid": "B1gbLUK5cN",
-    "name": "relatorio-de-convenios",
+    "shortid": "BJxzkl59cE",
+    "name": "relatorio-de-residentes",
     "recipe": "chrome-pdf",
     "engine": "handlebars",
     "chrome": {
         "printBackground": true
     },
-    "creationDate": "2019-04-22T00:10:45.012Z",
-    "modificationDate": {
-        "$$date": 1555894294978
+    "creationDate": {
+        "$$date": 1555894294973
     },
-    "_id": "GB2a9hhNpF4eFICh",
+    "modificationDate": {
+        "$$date": 1555894294973
+    },
+    "_id": "M1Xr4796WoVq995m",
     "$entitySet": "templates"
 }
