--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsreport": "^2.4.0",
     "mocha": "^5.2.0",
     "monk": "^6.0.6",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.1.0",
     "nodemailer-express-handlebars": "^3.0.0",
