--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai-http": "^4.2.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dynamic-html-pdf": "^1.0.0",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
     "handlebars": "^4.1.2",
