Implementação de relatórios com puppeteer

--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "crypto": "^1.0.1",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
+    "fs-extra": "^7.0.1",
     "handlebars": "^4.1.2",
     "jsonwebtoken": "^8.5.0",
     "mocha": "^5.2.0",
     "monk": "^6.0.6",
+    "mysql2": "^1.6.5",
     "nodemailer": "^6.1.0",
     "nodemailer-express-handlebars": "^3.0.0",
     "nodemon": "^1.18.10",
+    "puppeteer": "^1.15.0",
     "request": "^2.88.0",
     "sequelize": "^4.38.0"
   },
