--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-flash": "0.0.2",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.1.2",
+    "handlebars-intl": "^1.1.2",
     "jsonwebtoken": "^8.5.0",
     "mocha": "^5.2.0",
     "monk": "^6.0.6",
