--- a/config/config_remote.json
+++ b/config/config_remote.json
@@ -1,26 +1,26 @@
 {
   "development": {
-    "username": "admin-dev",
-    "password": "salv2018gpes10",
+    "username": "root",
+    "password": "",
     "database": "salv-bd",
-    "host": "mysql995.umbler.com",
-    "port": "41890",
+    "host": "127.0.0.1",
+    "port": "3306",
     "dialect": "mysql"
   },
   "test": {
-    "username": "admin-dev",
-    "password": "salv2018gpes10",
+    "username": "root",
+    "password": "",
     "database": "salv-bd",
-    "host": "mysql995.umbler.com",
-    "port": "41890",
+    "host": "127.0.0.1",
+    "port": "3306",
     "dialect": "mysql"
   },
   "production": {
-    "username": "admin-dev",
-    "password": "salv2018gpes10",
+    "username": "root",
+    "password": "",
     "database": "salv-bd",
-    "host": "mysql995.umbler.com",
-    "port": "41890",
+    "host": "127.0.0.1",
+    "port": "3306",
     "dialect": "mysql"
   }
 }
