--- a/config/config_local.json
+++ b/config/config_local.json
@@ -1,23 +1,10 @@
 {
-    "development": {
-      "username": "root",
-      "database": "testesalvbd",
-      "host": "localhost",
-      "port": "3306",
-      "dialect": "mysql"
-    },
-    "test": {
-      "username": "root",
-      "database": "testesalvbd",
-      "host": "localhost",
-      "port": "3306",
-      "dialect": "mysql"
-    },
-    "production": {
-      "username": "root",
-      "database": "testesalvbd",
-      "host": "localhost",
-      "port": "3306",
-      "dialect": "mysql"
-    }
+  "development": {
+    "username": "admin-dev",
+    "password": "salv2018gpes10",
+    "database": "salv-bd",
+    "host": "mysql995.umbler.com",
+    "port": "41890",
+    "dialect": "mysql"
   }
+}
